--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <div class="contact-info">
                 <h3>Contact Information</h3>
                 <br>
-                <p><strong>Email:</strong> viratasnaveen17@egmail.com</p>
+                <p><strong>Email:</strong> viratasnaveen17@gmail.com</p>
                 <p><strong>Phone:</strong> +919121618220</p>
                 <p><strong>Location:</strong> Hyderabad, India</p>
             </div>
