--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
             <div class="project-card">
                 <h3>Vehicle Detection and Threshold Time Estimation Using Computer Vision</h3>
                 <p>The main objective of the Project is to develop a computer vision system that detects vehicles in a video stream and estimates a threshold value based on the number of vehicles detected</p>
-                <p><strong>Technologies:</strong> Python,Django JavaScript, CSS, HTML</p>
+                <p><strong>Technologies:</strong> Python,Django JavaScript, CSS, HTML,MySQL</p>
             </div>
         </div>
     </section>
