--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <p><strong>Technologies:</strong> HTML, CSS, JavaScript, MySQL</p>
             </div>
             <div class="project-card">
-                <h3>Train Coach Seat Reservation System</h3>
-                <p>Implemented a seat reservation system in Angular for booking train seats, adhering to specific booking rules and conditions.</p>
-                <p><strong>Technologies:</strong> Angular, TypeScript, CSS, HTML</p>
+                <h3>Vehicle Detection and Threshold Time Estimation Using Computer Vision</h3>
+                <p>The main objective of the Project is to develop a computer vision system that detects vehicles in a video stream and estimates a threshold value based on the number of vehicles detected</p>
+                <p><strong>Technologies:</strong> Python,Django JavaScript, CSS, HTML,MySQL</p>
             </div>
         </div>
     </section>
