--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                 <p><strong>Year:</strong> 2020 - 2024</p>
                 <p><strong>CGPA:</strong> 8.5</p>
             </div>
-            <div class="education-card">
-                <h3>Intermediate in MPC</h3>
+             <div class="education-card">
+                <h3>Intermediate-MPC</h3>
                 <p><strong>College:</strong> Sri Saraswathi Junior College</p>
                 <p><strong>Year:</strong> 2018 - 2020</p>
                 <p><strong>CGPA:</strong> 9.63</p>
             </div>
             <div class="education-card">
                 <h3>High School</h3>
-                <p><strong>School:</strong> Sri Vidyanikethan School</p>
+                <p><strong>School:</strong> Surya Vidyanikethan School</p>
                 <p><strong>Year:</strong> 2017 - 2018</p>
                 <p><strong>CGPA:</strong> 9.7</p>
             </div>
